<resources>
    <string name="app_name">Shift EZ</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="schedule_week">Week 00</string>
    <string name="schedule_week_days">Sun XX/XX/XXXX - Sat XX/XX/XXXX</string>
    <string name="schedule_image">Schedule Image</string>
    <string name="schedule_week_current">X  Weeks Ago</string>

    <string name="activity_schedule_title">Schedule</string>
    <string name="schedule_info_icon">Info Icon</string>
    <string name="schedule_info_preview">Schedule Image Preview</string>
    <string name="activity_upload_base_name">activity_upload_base</string>
    <string name="activity_upload_title">Schedule Upload</string>
    <string name="schedule_upload_button">Upload Schedule</string>
    <string name="year_spinner_title">Year</string>
    <string name="week_spinner_title">Week</string>
    <string name="week_offset_title">Week Offset</string>
    <string name="failure_image_desc">Failure Image</string>
    <string name="schedule_year">XXXX</string>
    <string name="schedule_image_transition">schedule_image_transition</string>
    <string name="activity_login_title">Login</string>
    <string name="store_spinner_title">Store Name</string>
    <string name="dep_spinner_title">Department</string>
    <string name="action_logout">Logout</string>
    <string name="action_revoke">Revoke</string>
    <string name="play_services_error_fmt">Play Services Error</string>
    <string name="action_refresh">Refresh Schedules</string>
    <string name="profile_setup_button">Finish Profile Setup</string>
    <string name="new_dep">Add a New Department</string>
    <string name="new_store">Add a New Store</string>
    <string name="no_network">Error: No Network Available</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_header_stores">Stores</string>
    <string name="empty_schedules_view">No Schedules For This Department Yet!\n Add one by pressing the Plus Button.</string>
    <string name="action_share_store">Share Store</string>
    <string name="action_join_store">Join Store</string>
    <string name="share_using">Share Store Using</string>
    <string name="drawer_item_add_store">Add Store</string>
    <string name="action_remove_store">Remove Store</string>
    <string name="button_profile_revoke">Revoke</string>
    <string name="button_profile_logout">Logout</string>
    <string name="activity_profile_title">Profile</string>
    <string name="pref_heading_other">Other</string>
    <string name="pref_item_about_summary">About</string>
    <string name="pref_item_about">About</string>
    <string name="pref_heading_launch">Launch Preferences</string>
    <string name="activity_settings_title">Settings</string>
    <string name="add_store_button">Add Store</string>
    <string name="store_title">Store Name</string>
    <string name="dep_title">Department Name</string>
    <string name="activity_add_store_title">Add Store</string>
    <string name="schedule_share_icon">Share Schedule</string>
    <string name="share_schedule_using">Share Schedule Using</string>
    <string name="schedule_update_icon">Update Schedule</string>
</resources>
