<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_autorenew"
        android:orderInCategory="0"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_share_store"
        android:orderInCategory="1"
        android:title="@string/action_share_store"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_join_store"
        android:orderInCategory="2"
        android:title="@string/action_join_store"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_remove_store"
        android:orderInCategory="3"
        android:title="@string/action_remove_store"
        app:showAsAction="never"/>
</menu>