<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <android.support.v7.widget.CardView
        android:id="@+id/schedule_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:weightSum="100">

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="fill_parent"
                android:layout_height="0px"
                android:layout_weight="20"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/schedule_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/schedule_year"
                    android:textColor="@color/primary_text"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/schedule_week"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/schedule_week"
                    android:textColor="@color/primary_text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/schedule_week_current"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/schedule_week_current"
                    android:textColor="@color/secondary_text"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/schedule_week_days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/schedule_week_days"
                    android:textColor="@color/secondary_text"
                    android:textSize="15sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/ll2"
                android:layout_width="fill_parent"
                android:layout_height="0px"
                android:layout_weight="80"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/schedule_image"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/schedule_image"
                    android:scaleType="centerCrop"
                    android:transitionName="@string/schedule_image_transition" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>