<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_upload_base"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:transitionName="@string/activity_upload_base_name">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/store_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="150dp"
                android:text="@string/store_title"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <EditText
                android:id="@+id/store_name"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dep_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="150dp"
                android:text="@string/dep_title"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <EditText
                android:id="@+id/dep_name"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"/>
        </LinearLayout>

        <Button
            android:id="@+id/add_store_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_store_button"/>

    </LinearLayout>

</LinearLayout>