<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <LinearLayout
        android:id="@+id/store_layout"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/store_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:text="@string/store_spinner_title"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <Spinner
            android:id="@+id/store_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dep_layout"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/store_layout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dep_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:text="@string/dep_spinner_title"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <Spinner
            android:id="@+id/dep_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/profile_setup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:enabled="false"
        android:text="@string/profile_setup_button"/>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:visibility="gone"/>
</RelativeLayout>